add some tui primitives

--- a/config.toml
+++ b/config.toml
@@ -15,4 +15,4 @@ python = ["py"]
 [general]
 only-if-space-after = true
 highlight-command = "source-highlight -f esc --style-file=esc.style -i %FILE%"
-
+box-style = "heavysharp"
